# OSISP

./: .gitignore  CMakeLists.txt  README.md  toolchain-mingw64.cmake
Lab_1/: CMakeLists.txt  Readme.md
Lab_1/task1_self_restoring/: CMakeLists.txt  README.md  run.sh  self_restoring.c
Lab_2/: CMakeLists.txt  Readme.md
Lab_2/task1_async_io/: CMakeLists.txt  README.md  async_io.c  run.sh
Lab_3/: CMakeLists.txt  Readme.md
Lab_3/task4_log_server/: CMakeLists.txt  README.md  log_client.c  log_server.c  run.sh  run_demo.sh
Lab_4/: CMakeLists.txt  Readme.md
Lab_4/task2_readers_writers/: CMakeLists.txt  README.md  main.cpp  run.sh
Lab_5/: CMakeLists.txt  Readme.md
Lab_5/task1_tcp_chat/: CMakeLists.txt  README.md  client.c  run.sh  server.c
Lab_6/: CMakeLists.txt  Readme.md
Lab_6/task7_dll/: CMakeLists.txt  README.md  client.c  math_library.c  run.sh
